<resources>
    <string name="app_name">FitApp</string>

    <!--Drawer menu-->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="create_program">Create Program</string>
    <string name="programs">Programs</string>
    <string name="progress">Progress</string>
    <string name="journal">Journal</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="other">Other</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="exit">Exit</string>
    <string name="help_feedback">Help &amp; feedback</string>

    <!--Registration-->

    <string name="full_name">Full name</string>
    <string name="password">Password</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="description">Description</string>
    <string name="input_error_name">Name required</string>
    <string name="input_error_email">Email required</string>
    <string name="input_error_country">Country required</string>
    <string name="input_error_city">City required</string>
    <string name="input_error_password">Password required</string>
    <string name="input_error_phone">Phone required</string>
    <string name="input_error_password_length">Password should be at least 6 characters long</string>
    <string name="input_error_phone_invalid">Enter a valid phone number</string>
    <string name="registration_success">Registered Successfully. Please check your mailbox and verify</string>
    <string name="input_error_email_invalid">Enter a valid email</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>


    <!--Profile-->
    <string name="username">Full Name</string>
    <string name="user_email">Olegtchobotary2000@gmail.com</string>
    <string name="profile_title">Top Editor</string>
    <string name="profile_description">I love fantastic things, colors and good design</string>
    <string name="city_country">Chernivtsi, Ukraine</string>
    <string name="rating_numb">9.5</string>
    <string name="rating">rating</string>
    <string name="programs_numb">56</string>
    <string name="programs_prof">programs</string>
    <string name="view_programs">View Programs</string>
    <string name="contact">Contact</string>
    <string name="update">Update</string>

    <!--Programs-->
    <string name="title">Title</string>
    <string name="tags">Tags, use comma for separation tags</string>
    <string name="attach_files">Attaching Files</string>
    <string name="public_program">Everyone can see your program</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="publish">Publish</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Settings -->

    <string name="pref_header_profile">PROFILE</string>
    <string name="pref_header_app">APPLICATION</string>
    <string name="pref_header_other">OTHER</string>

    <string name="pref_auto_login">Auto Login</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_notifications">Notifications</string>

    <string name="users">Users</string>


</resources>
