<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="navHeader.NavHeaderNotAuthorized">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_logged_in"
                android:textColor="?attr/textColor" />

            <Button
                android:id="@+id/nav_header_log_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:paddingLeft="@dimen/nav_header_margin"
                android:text="@string/log_in"
                android:textColor="?attr/textColor" />

            <Button
                android:id="@+id/nav_header_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:paddingLeft="@dimen/nav_header_margin"
                android:text="@string/sign_up"
                android:textColor="?attr/textColor" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>